<resources>
    <string name="app_name">Flopy</string>
    <string name="email_mask">email</string>
    <string name="password_mask">Пароль</string>
    <string name="password_repeat_mask">Повторите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_massage1">Регистрация</string>
    <string name="register_code_massage1">Введите разовый код</string>
    <string name="register_code_massage2">Отправленный на почту:</string>
    <string name="register_code_mask">123456</string>
    <string name="register_code_button">Отправить</string>
    <string name="login_button">Войти</string>
    <string name="start_massage1">Найдите того, кто идеально вам подходит</string>
    <string name="start_massage2">Авторизация</string>
    <string name="start_massage3">Продолжая, вы подтверждаете что, вам уже исполнилось 18 лет</string>
    <string name="login_method1">Google</string>
    <string name="login_method2">VK</string>
    <string name="login_method3">Login</string>

    <string-array name="gender_array">
        <item>Мужской</item>
        <item>Женский</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="target_array">
        <item><b>Дружба</b>\nНайти друзей и знакомых</item>
        <item><b>Свидания</b>\nХодить на свидания и хорошо\nпроводить время</item>
        <item><b>Отношения</b>\nНайти вторую половинку</item>
        <item><b>Общение без конкретики</b>\nОбщяться, делиться мыслями</item>
    </string-array>

    <string-array name="zodiac_sign_array">
        <item>Овен</item>
        <item>Телец</item>
        <item>Близнецы</item>
        <item>Рак</item>
        <item>Лев</item>
        <item>Дева</item>
        <item>Весы</item>
        <item>Скорпион</item>
        <item>Стрелец</item>
        <item>Козерог</item>
        <item>Водолей</item>
        <item>Рыбы</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="education_array">
        <item>Среднее</item>
        <item>Высшее</item>
        <item>Аспирант/\nКандидат наук</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="children_array">
        <item>Нет и не планирую</item>
        <item>Нет, но хотелось бы</item>
        <item>Уже есть</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="smoking_array">
        <item>Резко негативно</item>
        <item>Нейтрально</item>
        <item>Положительно</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="alcohol_array">
        <item>Резко негативно</item>
        <item>Нейтрально</item>
        <item>Положительно</item>
        <item>Не выбрано</item>
    </string-array>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

        <!-- Для yes_no_options -->
        <string-array name="yes_no_options">
            <item>Да</item>
            <item>Нет</item>
        </string-array>

        <!-- Для zodiac_signs -->
        <string-array name="zodiac_signs">
            <item>Овен</item>
            <item>Телец</item>
            <item>Близнецы</item>
            <item>Рак</item>
            <item>Лев</item>
            <item>Дева</item>
            <item>Весы</item>
            <item>Скорпион</item>
            <item>Стрелец</item>
            <item>Козерог</item>
            <item>Водолей</item>
            <item>Рыбы</item>
        </string-array>


</resources>