<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.loginAndRegister.FragmentRegister" >

    <!-- Надпись "Регистрация" -->
    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_massage1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email -->
    <EditText
        android:id="@+id/editEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background_black"
        android:ems="10"
        android:hint="@string/email_mask"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintStart_toStartOf="@+id/textViewLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <!-- Пароль 1 -->
    <EditText
        android:id="@+id/editPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background_black"
        android:ems="10"
        android:hint="@string/password_mask"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintStart_toStartOf="@+id/editEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editEmailRegister"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Пароль 2 -->
    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background_black"
        android:ems="10"
        android:hint="@string/password_repeat_mask"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/textColorHint"
        app:layout_constraintStart_toStartOf="@+id/editPassword1"
        app:layout_constraintTop_toBottomOf="@+id/editPassword1"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Кнопка регистрации -->
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/register_button"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword2"
        app:layout_constraintStart_toStartOf="@+id/editPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editPassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>