<!-- res/layout/activity_main.xml -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/vertical_gradient_background">



    <!-- Фон Лого приложения "Flopy" -->

    <!-- Лого приложения "Flopy" -->
    <ImageView
        android:id="@+id/imageViewLogoBac"
        android:layout_width="329dp"
        android:layout_height="492dp"
        android:layout_marginEnd="-100dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo_bac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName"
        app:layout_constraintVertical_bias="0.435"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="73dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <!-- Название приложения "Flopy" -->
    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Две надписи одна под другой -->
    <TextView
        android:id="@+id/textViewLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/start_massage1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:text="@string/start_massage2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel1" />

    <!-- Кнопки типа входа -->


    <TextView
        android:id="@+id/textViewButton1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_method1"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <TextView
        android:id="@+id/textViewButton2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_method2"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel2" />

    <ImageView
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/vk"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel2" />

    <ImageView
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:importantForAccessibility="no"
        android:src="@drawable/login"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel2" />

    <TextView
        android:id="@+id/textViewButton3Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_method3"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <!-- Условия использования -->
    <TextView
        android:id="@+id/textViewTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_massage3"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
