<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".ui.login.FragmentInputSelection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:fadeScrollbars="true">

        <TextView
            android:id="@+id/textViewLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_massage1"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLabel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/start_massage2"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabel3" />

        <ImageView
            android:id="@+id/but_input_google"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabel4" />

        <ImageView
            android:id="@+id/but_input_vk"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/vk"
            app:layout_constraintBottom_toTopOf="@+id/textViewButton1Label2"
            app:layout_constraintStart_toEndOf="@+id/but_input_google"
            app:layout_constraintTop_toTopOf="@+id/but_input_google" />

        <ImageView
            android:id="@+id/but_input_login"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/login"
            app:layout_constraintBottom_toBottomOf="@+id/but_input_vk"
            app:layout_constraintStart_toEndOf="@+id/but_input_vk"
            app:layout_constraintTop_toTopOf="@+id/but_input_vk" />

        <!-- Подпись кнопки Google -->
        <TextView
            android:id="@+id/textViewButton1Label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_method1"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/but_input_google"
            app:layout_constraintStart_toStartOf="@+id/but_input_google"
            app:layout_constraintTop_toBottomOf="@+id/but_input_google" />

        <!-- Подпись кнопки VK -->
        <TextView
            android:id="@+id/textViewButton2Label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_method2"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/but_input_vk"
            app:layout_constraintStart_toStartOf="@+id/but_input_vk"
            app:layout_constraintTop_toBottomOf="@+id/but_input_vk" />

        <!-- Подпись кнопки Login -->
        <TextView
            android:id="@+id/textViewButton3Label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_method3"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/but_input_login"
            app:layout_constraintStart_toStartOf="@+id/but_input_login"
            app:layout_constraintTop_toBottomOf="@+id/but_input_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>